exports[`scanUrl > #invalid See https://example.com/issue/1234 for details. 1`] = `
## Input
    1 | See https://example.com/issue/1234 for details.

## Output
  > (1)

    > 1 | See https://example.com/issue/1234 for details.
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/issue/1234 1`] = `
## Input
    1 | https://example.com/issue/1234

## Output
  > (1)

    > 1 | https://example.com/issue/1234
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com and https://example2.com 1`] = `
## Input
    1 | see https://example.com and https://example2.com

## Output
  > (1)

    > 1 | see https://example.com and https://example2.com
        |     ^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | see https://example.com and https://example2.com
        |                             ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com;new line 1`] = `
## Input
    1 | see https://example.com;new line

## Output
  > (1)

    > 1 | see https://example.com;new line
        |     ^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com?foo=bar and https://exampl... 1`] = `
## Input
    1 | see https://example.com?foo=bar and https://example2.com

## Output
  > (1)

    > 1 | see https://example.com?foo=bar and https://example2.com
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | see https://example.com?foo=bar and https://example2.com
        |                                     ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com\\nnew line 1`] = `
## Input
    1 | see https://example.com
    2 | new line

## Output
  > (1)

    > 1 | see https://example.com
        |     ^^^^^^^^^^^^^^^^^^^
      2 | new line
`;

exports[`scanUrl > #invalid see https://example.com{new line 1`] = `
## Input
    1 | see https://example.com{new line

## Output
  > (1)

    > 1 | see https://example.com{new line
        |     ^^^^^^^^^^^^^^^^^^^
`;
